# find-font

./: Cargo.toml  README-ZH.md  README.md  index.d.ts  index.js  package.json
.github/workflows/: CI.yml
__test__/: font.spec.mjs  index.spec.mjs
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
src/models/: font_descriptor.rs  mod.rs
src/services/: font_service.rs  mod.rs
src/tests/: mod.rs
