[package]
edition = "2021"
name = "font-finder"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.15.0", features = ["async"] }
napi-derive = "2.15.0"
font-kit = "0.13.1"
parking_lot = "0.12.1"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["rt"] }

[build-dependencies]
napi-build = "2.0.2"

[profile.release]
lto = true
strip = "symbols"
